[package]
name = "javahexor"
version = "0.1.0"
edition = "2021"
authors = ["Smukx <smukx@proton.me"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"
gtk-sys = "0.18.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
tokio = { version = "1.35.1", features = ["full"] }
indicatif = "0.17.7"
futures-util = "0.3.30"
anyhow = "1.0.77"
actix-web = "4.4.1"
nix = { version = "0.27.1", features = ["process"] }
fork = "0.1.22"
actix-files = "0.6.5"
ansi_term = "0.12.1"
